--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,15 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "jquery": "^3.4.1",
+    "rc-progress": "^2.5.1",
     "react": "^16.8.6",
+    "react-affixed": "^1.1.3",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "react-sticky": "^6.0.3",
+    "react-tabs": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
